# cache_measurement

./: README.md
cache_l123_cpu/: CMakeLists.txt  README.md  cache_L123_c++20.cpp  plot_tps_memory.py  tech_processeur.txt  tps_fct_mem_Ultra7_155Hx22_AC.txt  tps_fct_mem_i9-13900KF_3.00GHz.txt
cache_l12x_cuda/: CMakeLists.txt  README.md  cache_L12x_cuda.cu
cache_line_cpu/: CMakeLists.txt  cache_line_c++20.cpp
cache_line_cuda/: CMakeLists.txt  cache_line_cuda.cu
